@@ -1211,18 +1211,18 @@
 	'S_NO_EVENTS_FOUND'=>			'No events found',
 	'S_EVENTS_SINCE'=>			'Events since',
 	'S_EVENTS_DATE_FORMAT'=>		'd M Y H:i:s',
-	'S_EVENTS_DISCOVERY_TIME_FORMAT'=>	'Y.M.d H:i:s',
-	'S_EVENTS_ACTION_TIME_FORMAT'=>		'Y.M.d H:i:s',
+	'S_EVENTS_DISCOVERY_TIME_FORMAT'=>	'd M Y H:i:s',
+	'S_EVENTS_ACTION_TIME_FORMAT'=>		'd M Y H:i:s',
 	'S_UP_BIG'=>		'UP',
 	'S_DOWN_BIG'=>		'DOWN',
 	'S_DISCOVERED_BIG'=>		'DISCOVERED',
 	'S_LOST_BIG'=>		'LOST',
 
 //	events.inc.php
-	'S_EVENTS_EVENT_DETAILS_DATE_FORMAT'=>			'Y.M.d H:i:s',
-	'S_EVENTS_SMALL_EVENT_LIST_DATE_FORMAT'=>		'Y.M.d H:i:s',
+	'S_EVENTS_EVENT_DETAILS_DATE_FORMAT'=>			'd M Y H:i:s',
+	'S_EVENTS_SMALL_EVENT_LIST_DATE_FORMAT'=>		'd M Y H:i:s',
 	'S_EVENTS_POPUP_EVENT_LIST_DATE_FORMAT'=>		'd M Y H:i:s',
-	'S_EVENTS_TRIGGERS_EVENTS_HISTORY_LIST_DATE_FORMAT'=>	'Y.M.d H:i:s',
+	'S_EVENTS_TRIGGERS_EVENTS_HISTORY_LIST_DATE_FORMAT'=>	'd M Y H:i:s',
 
 //	latest.php
 	'S_LAST_CHECK'=>			'Last check',
